--- a/chat.html
+++ b/chat.html
@@ -155,8 +155,7 @@
                                 </div>
                             </div>
                             <div class="chat-footer">
-                                <textarea rows="1" class="form-control" placeholder="Aa" value="Aa">
-                                </textarea>
+                                <textarea rows="1" class="form-control" placeholder="Aa"></textarea>
                                 <button type="submit" class="chat-btn">
                                     <i class="fab fa-telegram-plane"></i>
                                   </button>
@@ -167,7 +166,6 @@
                 </div>
             </div>
         </section>
-
     </main>
 
 
@@ -181,8 +179,8 @@
 
 
 
-    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -205,8 +203,8 @@
         </div>
     </div>
 
-    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -232,16 +230,14 @@
         </div>
     </div>
 
-    <div class="modal fade pop-up" id="fail-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="fail-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <!-- <img src="assets/img/Group 1238.png" width="300px" class="failed-body">
-                <img src="assets/img/Group 1236.png" class="failed-head"> -->
                     <img class="img-fluid" src="assets/img/failed.svg">
                     <h5 class="modal-title">The Operation Failed</h5>
                     <a href="#" data-bs-dismiss="modal">Try Again!</a>
@@ -251,16 +247,14 @@
     </div>
 
 
-    <div class="modal fade pop-up" id="success-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="success-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <!-- <img src="assets/img/Group 1238.png" width="300px" class="failed-body">
-                <img src="assets/img/Group 1236.png" class="failed-head"> -->
                     <img class="img-fluid" src="assets/img/success.svg">
                     <h5 class="modal-title">Completed Successfully</h5>
                     <a href="#" data-bs-dismiss="modal">Thank you!</a>
