--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-4 d-flex justify-content-end d-sm-block d-none">
+                    <div class="col-sm-4 col-4 d-flex justify-content-end d-sm-flex d-none">
                         <img src="assets/img/about-5.png" class="img-fluid about-img">
                     </div>
                 </div>
@@ -154,8 +154,8 @@
 
 
 
-    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -178,8 +178,8 @@
         </div>
     </div>
 
-    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -205,8 +205,8 @@
         </div>
     </div>
 
-    <div class="modal fade pop-up" id="fail-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="fail-modal" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -223,9 +223,8 @@
         </div>
     </div>
 
-
-    <div class="modal fade pop-up" id="success-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="success-modal" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
