--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
+                            <h5 class="modal-title">City</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <h5 class="modal-title">City</h5>
                         <div class="modal-body container-fluid">
-                            <div class="row gx-0">
-                                <div class="col-4">
+                            <div class="row gx-0 border-bottom">
+                                <div class="col-4 border-right">
                                     <div class="accordion accordion-flush" id="accordionFlush">
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="flush-headingOne">
