--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
                                                     <div class="category-card">
                                                         <div class="form-check">
                                                             <input class="form-check-input" type="radio" name="project"
+                                                                id="project-1">
+                                                            <label class="form-check-label" for="project-1">
+                                                                <img src="assets/img/type-1.jpg" class="img-fluid">
+                                                                <p>Alamein Tower</p>
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-3 col-4">
+                                                    <div class="category-card">
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="radio" name="project"
                                                                 id="project-2">
                                                             <label class="form-check-label" for="project-2">
                                                                 <img src="assets/img/type-5.jpg" class="img-fluid">
@@ -325,14 +337,14 @@
                                         </div>
                                         <div class="tab-pane fade" id="list-filter" role="tabpanel"
                                             aria-labelledby="list-filter-list">
-                                            <div class="row">
+                                            <div class="row gx-0">
                                                 <div class="col-6">
                                                     <div class="type-filter">
                                                         <div class="form-check">
                                                             <input class="form-check-input" type="radio" name="type"
                                                                 id="rent">
-                                                            <label class="form-check-label" for="rent">
-                                                                Rent
+                                                            <label class="form-check-label" for="buy">
+                                                                Buy
                                                             </label>
                                                         </div>
                                                     </div>
@@ -679,6 +691,12 @@
         </section>
 
         <section id="map">
+            <div class="buttons">
+                <a class="search-category" id="city-id">Alamein</a>
+                <a class="search-category" id="city-id">Alamein</a>
+                <a class="search-category" id="city-id">Alamein</a>
+                <a class="search-category" id="city-id">Alamein</a>
+            </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-md-5 col-12">
