--- a/index.html
+++ b/index.html
@@ -690,14 +690,15 @@
             </div>
         </section>
 
-        <section id="map">
+        <section class="map">
             <div class="buttons">
                 <a class="search-category" id="city-id">Alamein</a>
                 <a class="search-category" id="city-id">Alamein</a>
                 <a class="search-category" id="city-id">Alamein</a>
                 <a class="search-category" id="city-id">Alamein</a>
             </div>
-            <div class="container-fluid">
+            <div id="map">
+             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-md-5 col-12">
                         <h4>
@@ -740,6 +741,7 @@
                 </div>
 
             </div>
+        </div>
         </section>
 
         <section id="sold">
