--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="buttons">
                     <a class="search-category" id="search-by-city" data-bs-toggle="modal"
-                        data-bs-target="#cities-list">City</a>
+                        data-bs-target="#cities-list">Filter</a>
                 </div>
             </div>
             <!-- Modal -->  
@@ -132,7 +132,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">City</h5>
+                            <h5 class="modal-title">Filter</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body container-fluid">
@@ -144,7 +144,7 @@
                                             aria-controls="list-city">Cites</a>
                                         <a class="list-group-item list-group-item-action" id="list-project-list"
                                             data-bs-toggle="list" href="#list-project" role="tab"
-                                            aria-controls="list-project">Type</a>
+                                            aria-controls="list-project">Projects</a>
                                         <a class="list-group-item list-group-item-action" id="list-price-list"
                                             data-bs-toggle="list" href="#list-price" role="tab"
                                             aria-controls="list-price">Price Range</a>
