--- a/index.html
+++ b/index.html
@@ -115,24 +115,28 @@
             <div class="row gx-0">
                 <div class="col-lg-4 col-sm-3 col-12 order-sm-1 order-3">
                     <div class="boxes">
-                        <div class="box">
+                        <div class="box count-box">
                             <img src="assets/img/home.png">
-                            <span>300</span>
+                            <span data-purecounter-start="0" data-purecounter-end="300" data-purecounter-duration="4"
+                                class="counter purecounter"></span>
                             <p>Projects</p>
                         </div>
                         <div class="box">
                             <img src="assets/img/user.png">
-                            <span>200</span>
+                            <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="4"
+                                class="counter purecounter"></span>
                             <p>Happy Clients</p>
                         </div>
                         <div class="box">
                             <img src="assets/img/key.png">
-                            <span>200</span>
+                            <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="4"
+                                class="counter purecounter"></span>
                             <p>Sold Properties</p>
                         </div>
                         <div class="box">
                             <img src="assets/img/city.png">
-                            <span>50</span>
+                            <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="4"
+                                class="counter purecounter"></span>
                             <p>Cities</p>
                         </div>
                     </div>
@@ -923,8 +927,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </section>
 
@@ -1123,6 +1125,7 @@
         integrity="sha512-58KxhG+wNkjwSa3ejC6PlVoQLjD5wxRxfpjB24/L7TXByQIEXE04/JKWeD17pTAOIERUMAnj7+3ff/L45ZNQlw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs@1.1.1/dist/purecounter.js"></script>
     <script src="assets/js/fa-pro.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- Swiper JS -->
